pygluu/kubernetes/templates/cn-istio/base/cn-virtual-services.yaml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: gluu-istio-casa
spec:
  gateways:
  - gluu-global-gtw
  hosts:
  - demoexample.gluu.org
  http:
  - name: "gluu-istio-casa"
    match:
    - uri:
        exact: "/casa"
    route:
    - destination:
        host: casa.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
---
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gluu-istio-fido2-configuration
spec:
  hosts:
  - demoexample.gluu.org
  gateways:
  - gluu-global-gtw
  http:
  - name: "gluu-istio-fido2-configuration"
    match:
    - uri:
        prefix: "/.well-known/fido2-configuration"
    rewrite:
      uri: "/fido2/restv1/fido2/configuration"
    route:
    - destination:
        host: fido2.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
---
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gluu-istio-auth-server
spec:
  hosts:
  - demoexample.gluu.org
  gateways:
  - gluu-global-gtw # can omit the namespace if gateway is in same namespace as virtual service.
  http:
  - name: "gluu-istio-openid-config"
    match:
    - uri:
        prefix: "/.well-known/openid-configuration"
    rewrite:
      uri: "/auth-server/.well-known/openid-configuration"
    route:
      - destination:
          host: auth-server.gluu.svc.cluster.local
          port:
            number: 8080
        weight: 100
  - name: "gluu-istio-uma2-config"
    match:
    - uri:
        prefix: "/.well-known/uma2-configuration"
    rewrite:
      uri: "/auth-server/restv1/uma2-configuration"
    route:
      - destination:
          host: auth-server.gluu.svc.cluster.local
          port:
            number: 8080
        weight: 100
  - name: "gluu-istio-webdiscovery"
    match:
    - uri:
        prefix: "/.well-known/simple-web-discovery"
    rewrite:
      uri: "/auth-server/.well-known/simple-web-discovery"
    route:
    - destination:
        host: auth-server.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
  - name: "gluu-istio-gluu"
    match:
    - uri:
        prefix: "/auth-server"
    route:
    - destination:
        host: auth-server.gluu.svc.cluster.local
        port:
          number: 8080
  - name: "gluu-istio-webfinger"
    match:
    - uri:
        prefix: "/.well-known/webfinger"
    rewrite:
      uri: "/auth-server/.well-known/webfinger"
    route:
    - destination:
        host: auth-server.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
  - name: "gluu-istio-u2f-config"
    match:
    - uri:
        prefix: "/.well-known/fido-configuration"
    rewrite:
      uri: "/auth-server/restv1/fido-configuration"
    route:
    - destination:
        host: auth-server.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
---
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gluu-istio-passport
spec:
  hosts:
  - demoexample.gluu.org
  gateways:
  - gluu-global-gtw
  http:
  - name: "gluu-istio-passport"
    match:
    - uri:
        prefix: "/passport"
    route:
    - destination:
        host: oxpassport.gluu.svc.cluster.local
        port:
          number: 8090
      weight: 100
---
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gluu-istio-oxshibbioleth
spec:
  hosts:
    - demoexample.gluu.org
  gateways:
    - gluu-global-gtw
  http:
  - name: "gluu-istio-oxshibbioleth"
    match:
    - uri:
        prefix: "/idp"
    rewrite:
      uri: "/identity"
    route:
    - destination:
        host: oxshibboleth.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
---
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gluu-istio-base
spec:
  hosts:
  - demoexample.gluu.org
  gateways:
  - gluu-global-gtw
  http:
  - name: "gluu-istio-base"
    match:
    - uri:
        exact: "/"
    rewrite:
       uri: "/identity"
    route:
    - destination:
        host: oxtrust.gluu.svc.cluster.local
        port:
          number: 8080
      weight: 100
  - name: "gluu-istio-oxtrust-stateful"
    match:
      - uri:
          prefix: "/identity"
    route:
      - destination:
          host: oxtrust.gluu.svc.cluster.local
          port:
            number: 8080
        weight: 100
---
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gluu-istio-scim-config
spec:
  hosts:
  - demoexample.gluu.org
  gateways:
  - gluu-global-gtw # can omit the namespace if gateway is in same namespace as virtual service.
  http:
  - name: "gluu-istio-scim-config"
    match:
    - uri:
        prefix: "/.well-known/scim-configuration"
    rewrite:
      uri: "/scim/restv1/scim-configuration"
    route:
      - destination:
          host: scim.gluu.svc.cluster.local
          port:
            number: 8080
        weight: 100
